fixed unittests spark by adding javaOptions